Update template to use the latest yieldstreet-lagom-sbt-plugin

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,5 @@
-name = Hello
+name = new-service
 organization = yieldstreet
-version = 1.0-SNAPSHOT
-lagom_version = 1.3.8
+version = 0.0.1-SNAPSHOT
+core_sbt_plugin_version = 2.0.0
 package = $organization$.$name;format="lower,word"$
