--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,5 @@
 name = new-service
 organization = yieldstreet
-version = 0.0.1-SNAPSHOT
-core_sbt_plugin_version = 2.0.0
+version = 1.0.0-SNAPSHOT
+core_sbt_plugin_version = 2.0.1-SNAPSHOT
 package = $organization$.$name;format="lower,word"$
